Notification fixes - Move all notification stuff to WebhookClient.ts - Make webhookUrls input box a text field - Add responseOrder for ordering responses in notifications - Add dynamic username to webhook template - Add some client-side input validation

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
 		"build": "vite build && tsc -b src",
 		"preview": "vite preview",
 		"clasp:push": "clasp push",
-		"clasp:deploy": "clasp deploy"
+		"clasp:deploy": "pnpm build && clasp push && clasp deploy"
 	}
 }
